--- a/style.css
+++ b/style.css
@@ -2,7 +2,13 @@
   margin: 0;
   padding: 0;
 }
-
+::-webkit-scrollbar{
+  width: 10px;
+}
+::-webkit-scrollbar-track{
+  background: #00cc99;
+  border-radius: 50px;
+}
 img{
     max-width: 100%;
     height: auto;
